update net feature
