# server/handler/serverstatus.go
@@ -117,3 +117,44 @@ func GetMemStatusHandler(c echo.Context) error {
 	v.Data = d
 	return c.JSON(http.StatusOK, v)
 }
+
+// GetNetStatusHandler godoc
+// @Summary Get Network Status
+// @Description Retrieves network status data based on the specified interval and limit.
+// @Tags Network
+// @Accept json
+// @Produce json
+// @Param interval query string false "Interval in seconds (default: 1)"
+// @Param limit query string false "Number of records to fetch (default: 30)"
+// @Success 200 {object} models.HttpResponse
+// @Failure 400 {object} models.HttpResponse
+// @Failure 500 {object} models.HttpResponse
+// @Router /net [get]
+func GetNetStatusHandler(c echo.Context) error {
+	tx := c.Get("tx").(*gorm.DB)
+	v := models.HttpResponseStatusOk()
+
+	interval := c.QueryParam("interval")
+	limit := c.QueryParam("limit")
+	if interval == "" {
+		interval = "1"
+	}
+	if limit == "" {
+		limit = "30"
+	}
+	intervalInt, err := strconv.Atoi(interval)
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, models.HttpResponseBadRequest("Invalid interval parameter"))
+	}
+	limitInt, err := strconv.Atoi(limit)
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, models.HttpResponseBadRequest("Invalid limit parameter"))
+	}
+
+	d, err := controller.GetNetStatus(tx, intervalInt, limitInt)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, models.HttpResponseInternalServerError(err.Error()))
+	}
+	v.Data = d
+	return c.JSON(http.StatusOK, v)
+}
